--- a/app/src/main/res/layout/activity_film_data.xml
+++ b/app/src/main/res/layout/activity_film_data.xml
@@ -1,52 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingLeft="16dp"
+    android:paddingTop="16dp"
+    android:paddingRight="16dp"
+    android:paddingBottom="16dp"
     tools:context=".FilmDataActivity">
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="149dp"
+        android:layout_height="180dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginEnd="16dp"
+        app:srcCompat="@drawable/back_to_future" />
 
     <TextView
         android:id="@+id/film_data"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="258dp"
-        android:text="@string/film_data"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.239"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_toEndOf="@id/imageView"
+        android:text="@string/film_data" />
 
-    <Button
-        android:id="@+id/film_related"
+    <TextView
+        android:id="@+id/film_director_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/film_related"
-        app:layout_constraintBottom_toTopOf="@+id/film_edit"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/film_data" />
+        android:layout_toEndOf="@id/imageView"
+        android:layout_below="@id/film_data"
+        android:text="@string/film_director_header" />
 
-    <Button
-        android:id="@+id/film_edit"
+    <TextView
+        android:id="@+id/film_director_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/film_edit"
-        app:layout_constraintBottom_toTopOf="@+id/film_return"
-        app:layout_constraintEnd_toEndOf="@+id/film_related"
-        app:layout_constraintStart_toStartOf="@+id/film_related"
-        app:layout_constraintTop_toBottomOf="@+id/film_related" />
+        android:layout_toEndOf="@id/imageView"
+        android:layout_below="@id/film_director_header"
+        android:text="@string/film_director_value" />
+
+    <TextView
+        android:id="@+id/film_year_header"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@id/imageView"
+        android:layout_below="@id/film_director_value"
+        android:text="@string/film_year_header" />
+
+    <TextView
+        android:id="@+id/film_year_value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@id/imageView"
+        android:layout_below="@id/film_year_header"
+        android:text="@string/film_year_value" />
+
+    <TextView
+        android:id="@+id/film_type_genere"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@id/imageView"
+        android:layout_below="@id/film_year_value"
+        android:text="@string/film_type_and_genere" />
+
+    <Button
+        android:id="@+id/film_imdb"
+        style="@style/Widget.AppCompat.Button.Small"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/film_type_genere"
+        android:layout_marginTop="16dp"
+        android:layout_toEndOf="@id/imageView"
+        android:text="@string/film_imdb" />
+
+    <TextView
+        android:id="@+id/extended_version"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/imageView"
+        android:layout_alignStart="@+id/imageView"
+        android:text="@string/extended_version" />
 
     <Button
         android:id="@+id/film_return"
+        android:text="@string/film_return"
+        style="@style/Widget.AppCompat.Button.Small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/film_return"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/film_edit"
-        app:layout_constraintStart_toStartOf="@+id/film_edit"
-        app:layout_constraintTop_toBottomOf="@+id/film_edit" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/extended_version"
+        android:layout_toStartOf="@+id/centerPoint" />
+
+    <TextView
+        android:id="@+id/centerPoint"
+        android:text=""
+        android:layout_width="0dip"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/extended_version"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:id="@+id/film_edit"
+        android:text="@string/film_edit"
+        style="@style/Widget.AppCompat.Button.Small"
+        android:layout_width="wrap_content"
+        android:layout_alignTop="@+id/film_return"
+        android:layout_alignBottom="@+id/film_return"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/extended_version"
+        android:layout_toEndOf="@+id/centerPoint" />
+
+</RelativeLayout>
