Practica 4 ejercicio 2 a medias

--- a/app/src/main/res/layout-land/activity_film_data.xml
+++ b/app/src/main/res/layout-land/activity_film_data.xml
@@ -12,7 +12,7 @@
         android:paddingTop="16dp"
         android:paddingRight="16dp"
         android:paddingBottom="16dp"
-        tools:context=".FilmDataActivity">
+        tools:context=".activity.FilmDataActivity">
     
         <ImageView
             android:id="@+id/imageView"
