--- a/app/src/main/res/layout-land/activity_film_edit.xml
+++ b/app/src/main/res/layout-land/activity_film_edit.xml
@@ -13,7 +13,7 @@
       android:paddingTop="16dp"
       android:paddingRight="16dp"
       android:paddingBottom="16dp"
-      tools:context=".FilmEditActivity">
+      tools:context=".activity.FilmEditActivity">
 
       <LinearLayout
           android:layout_width="match_parent"
