--- a/app/src/main/res/layout/activity_film_data.xml
+++ b/app/src/main/res/layout/activity_film_data.xml
@@ -8,7 +8,7 @@
     android:paddingTop="16dp"
     android:paddingRight="16dp"
     android:paddingBottom="16dp"
-    tools:context=".FilmDataActivity">
+    tools:context=".activity.FilmDataActivity">
 
     <ImageView
         android:id="@+id/imageView"
