--- a/app/src/main/res/layout/film_item.xml
+++ b/app/src/main/res/layout/film_item.xml
@@ -1,23 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <ImageView android:src="@mipmap/ic_launcher"
+    <ImageView
+        android:id="@+id/itemPoster"
+        android:src="@mipmap/ic_launcher"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="5dp"
         android:layout_width="50dp"
-        android:layout_height="50dp" />
+        android:layout_height="50dp"
+        android:contentDescription="@string/imageDescription" />
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal" >
-        <TextView android:id="@+id/itemName"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:orientation="vertical" >
+        <TextView
+            android:id="@+id/itemName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:text="@string/nullValue"
             android:layout_gravity="center"/>
-        <TextView android:id="@+id/itemDirector"
+        <TextView
+            android:id="@+id/itemDirector"
             android:layout_width="match_parent"
+            android:gravity="center_vertical"
             android:layout_height="wrap_content"
+            android:text="@string/nullValue"
             android:layout_gravity="center"/>
     </LinearLayout>
 </LinearLayout>
