--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <string-array name="genere_options">
-        <item>@string/film_edit_genere_1</item>
-        <item>@string/film_edit_genere_2</item>
-        <item>@string/film_edit_genere_3</item>
+    <string-array name="genre_options">
+        <item>@string/film_genre_0</item>
+        <item>@string/film_genre_1</item>
+        <item>@string/film_genre_2</item>
+        <item>@string/film_genre_3</item>
+        <item>@string/film_genre_4</item>
+        <item>@string/film_genre_5</item>
     </string-array>
 
     <string-array name="format_options">
-        <item>@string/film_edit_format_1</item>
-        <item>@string/film_edit_format_2</item>
-        <item>@string/film_edit_format_3</item>
+        <item>@string/film_format_0</item>
+        <item>@string/film_format_1</item>
+        <item>@string/film_format_2</item>
     </string-array>
 </resources>
