--- a/app/src/main/res/layout/activity_film_edit.xml
+++ b/app/src/main/res/layout/activity_film_edit.xml
@@ -42,40 +42,55 @@
         style="@style/Widget.AppCompat.Button.Small"/>
 
   </LinearLayout>
-  <EditText android:layout_width="match_parent"
+  <EditText
+      android:id="@+id/film_edit_title"
+      android:layout_width="match_parent"
       android:autofillHints="name"
       android:inputType="text"
       android:minHeight="48dp"
       android:layout_height="wrap_content"
+      android:text=""
       android:hint="@string/film_edit_title"
       android:layout_marginTop="20dp"/>
-  <EditText android:layout_width="match_parent"
+  <EditText
+      android:id="@+id/film_edit_director"
+      android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:inputType="text"
       android:minHeight="48dp"
+      android:text=""
       android:autofillHints="name"
       android:hint="@string/film_edit_director" />
-  <EditText android:layout_width="match_parent"
+  <EditText
+      android:id="@+id/film_edit_year"
+      android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:minHeight="48dp"
+      android:text=""
       android:inputType="text"
       android:importantForAutofill="no"
       android:hint="@string/film_edit_year" />
-  <EditText android:layout_width="match_parent"
+  <EditText
+      android:id="@+id/film_edit_imdb"
+      android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:minHeight="48dp"
+      android:text=""
       android:inputType="text"
       android:importantForAutofill="no"
       android:hint="@string/film_edit_imdb" />
   <Spinner
+      android:id="@+id/film_edit_genre"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
+      android:text=""
       android:minHeight="48dp"
       android:prompt="@string/film_genre_3"
       android:entries="@array/genre_options"/>
 
   <Spinner
+      android:id="@+id/film_edit_format"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:minHeight="48dp"
@@ -83,7 +98,9 @@
       android:prompt="@string/film_format_1"
       android:entries="@array/format_options"/>
 
-  <EditText android:layout_width="match_parent"
+  <EditText
+      android:id="@+id/film_edit_comments"
+      android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
       android:minHeight="48dp"
