--- a/app/src/main/res/layout-land/activity_film_edit.xml
+++ b/app/src/main/res/layout-land/activity_film_edit.xml
@@ -9,13 +9,19 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      android:paddingLeft="16dp"
-      android:paddingTop="16dp"
-      android:paddingRight="16dp"
-      android:paddingBottom="16dp"
       tools:context=".activity.FilmEditActivity">
 
+      <include
+          android:id="@+id/include_appbar"
+          layout="@layout/app_bar_layout"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toTopOf="parent" />
+
       <LinearLayout
+          android:paddingLeft="16dp"
+          android:paddingTop="16dp"
+          android:paddingRight="16dp"
+          android:paddingBottom="16dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
@@ -46,78 +52,86 @@
             style="@style/Widget.AppCompat.Button.Small"/>
 
       </LinearLayout>
-      <EditText android:layout_width="match_parent"
-          android:autofillHints="name"
-          android:inputType="text"
-          android:minHeight="48dp"
-          android:layout_height="wrap_content"
-          android:hint="@string/film_edit_title"
-          android:layout_marginTop="20dp"/>
-      <EditText android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:inputType="text"
-          android:minHeight="48dp"
-          android:autofillHints="name"
-          android:hint="@string/film_edit_director" />
-      <EditText android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:minHeight="48dp"
-          android:inputType="text"
-          android:importantForAutofill="no"
-          android:hint="@string/film_edit_year" />
-      <EditText android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:minHeight="48dp"
-          android:inputType="text"
-          android:importantForAutofill="no"
-          android:hint="@string/film_edit_imdb" />
-      <Spinner
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:layout_marginTop="20dp"
-          android:minHeight="48dp"
-          android:prompt="@string/film_genre_1"
-          android:entries="@array/genre_options"/>
-
-      <Spinner
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:minHeight="48dp"
-          android:layout_marginTop="20dp"
-          android:prompt="@string/film_format_1"
-          android:entries="@array/format_options"/>
-
-      <EditText android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:layout_marginTop="20dp"
-          android:minHeight="48dp"
-          android:inputType="text"
-          android:importantForAutofill="no"
-          android:hint="@string/film_edit_comments" />
-
       <LinearLayout
+          android:paddingLeft="16dp"
+          android:paddingTop="16dp"
+          android:paddingRight="16dp"
+          android:paddingBottom="16dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:layout_marginTop="20dp"
-          android:layout_gravity="center|bottom"
-          android:orientation="horizontal">
-        <Button
-            android:id="@+id/film_cancel"
-            android:layout_width="0dp"
+          android:orientation="vertical">
+        <EditText android:layout_width="match_parent"
+            android:autofillHints="name"
+            android:inputType="text"
+            android:minHeight="48dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="@string/film_cancel"
-            android:layout_weight="2"
-            style="@style/Widget.AppCompat.Button.Small"/>
-        <Button
-            android:id="@+id/film_save"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_horizontal"
-            android:text="@string/film_save"
-            android:layout_weight="2"
-            style="@style/Widget.AppCompat.Button.Small"/>
+            android:hint="@string/film_edit_title"
+            android:layout_marginTop="20dp"/>
+        <EditText android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text"
+            android:minHeight="48dp"
+            android:autofillHints="name"
+            android:hint="@string/film_edit_director" />
+        <EditText android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minHeight="48dp"
+            android:inputType="text"
+            android:importantForAutofill="no"
+            android:hint="@string/film_edit_year" />
+        <EditText android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minHeight="48dp"
+            android:inputType="text"
+            android:importantForAutofill="no"
+            android:hint="@string/film_edit_imdb" />
+        <Spinner
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:minHeight="48dp"
+            android:prompt="@string/film_genre_1"
+            android:entries="@array/genre_options"/>
 
+        <Spinner
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minHeight="48dp"
+            android:layout_marginTop="20dp"
+            android:prompt="@string/film_format_1"
+            android:entries="@array/format_options"/>
+
+        <EditText android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:minHeight="48dp"
+            android:inputType="text"
+            android:importantForAutofill="no"
+            android:hint="@string/film_edit_comments" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_gravity="center|bottom"
+            android:orientation="horizontal">
+          <Button
+              android:id="@+id/film_cancel"
+              android:layout_width="0dp"
+              android:layout_height="wrap_content"
+              android:layout_gravity="center_horizontal"
+              android:text="@string/film_cancel"
+              android:layout_weight="2"
+              style="@style/Widget.AppCompat.Button.Small"/>
+          <Button
+              android:id="@+id/film_save"
+              android:layout_width="0dp"
+              android:layout_height="match_parent"
+              android:layout_gravity="center_horizontal"
+              android:text="@string/film_save"
+              android:layout_weight="2"
+              style="@style/Widget.AppCompat.Button.Small"/>
+        </LinearLayout>
       </LinearLayout>
     </LinearLayout>
 </ScrollView>
