--- a/app/src/main/res/layout/activity_film_edit.xml
+++ b/app/src/main/res/layout/activity_film_edit.xml
@@ -5,15 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingLeft="16dp"
-    android:paddingTop="16dp"
-    android:paddingRight="16dp"
-    android:paddingBottom="16dp"
     tools:context=".activity.FilmEditActivity">
+
+  <include
+      android:id="@+id/include_appbar"
+      layout="@layout/app_bar_layout"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent" />
 
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
+      android:paddingLeft="16dp"
+      android:paddingTop="16dp"
+      android:paddingRight="16dp"
+      android:paddingBottom="16dp"
       android:orientation="horizontal">
 
     <ImageView
@@ -42,94 +48,103 @@
         style="@style/Widget.AppCompat.Button.Small"/>
 
   </LinearLayout>
-  <EditText
-      android:id="@+id/film_edit_title"
-      android:layout_width="match_parent"
-      android:autofillHints="name"
-      android:inputType="text"
-      android:minHeight="48dp"
-      android:layout_height="wrap_content"
-      android:text=""
-      android:hint="@string/film_edit_title"
-      android:layout_marginTop="20dp"/>
-  <EditText
-      android:id="@+id/film_edit_director"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:inputType="text"
-      android:minHeight="48dp"
-      android:text=""
-      android:autofillHints="name"
-      android:hint="@string/film_edit_director" />
-  <EditText
-      android:id="@+id/film_edit_year"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:minHeight="48dp"
-      android:text=""
-      android:inputType="text"
-      android:importantForAutofill="no"
-      android:hint="@string/film_edit_year" />
-  <EditText
-      android:id="@+id/film_edit_imdb"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:minHeight="48dp"
-      android:text=""
-      android:inputType="text"
-      android:importantForAutofill="no"
-      android:hint="@string/film_edit_imdb" />
-  <Spinner
-      android:id="@+id/film_edit_genre"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="20dp"
-      android:text=""
-      android:minHeight="48dp"
-      android:prompt="@string/film_genre_3"
-      android:entries="@array/genre_options"/>
-
-  <Spinner
-      android:id="@+id/film_edit_format"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:minHeight="48dp"
-      android:layout_marginTop="20dp"
-      android:prompt="@string/film_format_1"
-      android:entries="@array/format_options"/>
-
-  <EditText
-      android:id="@+id/film_edit_comments"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="20dp"
-      android:minHeight="48dp"
-      android:inputType="text"
-      android:importantForAutofill="no"
-      android:hint="@string/film_edit_comments" />
-
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_marginTop="20dp"
-      android:layout_gravity="center|bottom"
-      android:orientation="horizontal">
-    <Button
-        android:id="@+id/film_cancel"
-        android:layout_width="0dp"
+      android:paddingLeft="16dp"
+      android:paddingTop="16dp"
+      android:orientation="vertical"
+      android:paddingRight="16dp"
+      android:paddingBottom="16dp" >
+    <EditText
+        android:id="@+id/film_edit_title"
+        android:layout_width="match_parent"
+        android:autofillHints="name"
+        android:inputType="text"
+        android:minHeight="48dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="@string/film_cancel"
-        android:layout_weight="2"
-        style="@style/Widget.AppCompat.Button.Small"/>
-    <Button
-        android:id="@+id/film_save"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="center_horizontal"
-        android:text="@string/film_save"
-        android:layout_weight="2"
-        style="@style/Widget.AppCompat.Button.Small"/>
+        android:text=""
+        android:hint="@string/film_edit_title"
+        android:layout_marginTop="20dp"/>
+    <EditText
+        android:id="@+id/film_edit_director"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="text"
+        android:minHeight="48dp"
+        android:text=""
+        android:autofillHints="name"
+        android:hint="@string/film_edit_director" />
+    <EditText
+        android:id="@+id/film_edit_year"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:minHeight="48dp"
+        android:text=""
+        android:inputType="text"
+        android:importantForAutofill="no"
+        android:hint="@string/film_edit_year" />
+    <EditText
+        android:id="@+id/film_edit_imdb"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:minHeight="48dp"
+        android:text=""
+        android:inputType="text"
+        android:importantForAutofill="no"
+        android:hint="@string/film_edit_imdb" />
+    <Spinner
+        android:id="@+id/film_edit_genre"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text=""
+        android:minHeight="48dp"
+        android:prompt="@string/film_genre_3"
+        android:entries="@array/genre_options"/>
 
+    <Spinner
+        android:id="@+id/film_edit_format"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:minHeight="48dp"
+        android:layout_marginTop="20dp"
+        android:prompt="@string/film_format_1"
+        android:entries="@array/format_options"/>
+
+    <EditText
+        android:id="@+id/film_edit_comments"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:minHeight="48dp"
+        android:inputType="text"
+        android:importantForAutofill="no"
+        android:hint="@string/film_edit_comments" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_gravity="center|bottom"
+        android:orientation="horizontal">
+      <Button
+          android:id="@+id/film_cancel"
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          android:layout_gravity="center_horizontal"
+          android:text="@string/film_cancel"
+          android:layout_weight="2"
+          style="@style/Widget.AppCompat.Button.Small"/>
+      <Button
+          android:id="@+id/film_save"
+          android:layout_width="0dp"
+          android:layout_height="match_parent"
+          android:layout_gravity="center_horizontal"
+          android:text="@string/film_save"
+          android:layout_weight="2"
+          style="@style/Widget.AppCompat.Button.Small"/>
+
+    </LinearLayout>
   </LinearLayout>
 </LinearLayout>
