--- a/app/src/main/res/values/flags.xml
+++ b/app/src/main/res/values/flags.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <bool name="use_recycled_view">true</bool>
+    <bool name="use_recycled_view">false</bool>
 </resources>
