FilmListActivity to Fragment

--- a/app/src/main/res/layout/activity_film_list_recycled.xml
+++ b/app/src/main/res/layout/activity_film_list_recycled.xml
@@ -1,22 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".activity.FilmListActivity"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".activity.FilmListActivity">
-
-    <include
-        android:id="@+id/include_appbar"
-        layout="@layout/app_bar_layout" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@android:id/list"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include_appbar"
-        android:scrollbars="vertical">
-    </androidx.recyclerview.widget.RecyclerView>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    android:layout_height="wrap_content"
+    android:id="@android:id/list"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="parent"
+    android:scrollbars="vertical"
+    />
