--- a/app/src/main/res/layout/activity_film_list_recycled.xml
+++ b/app/src/main/res/layout/activity_film_list_recycled.xml
@@ -8,5 +8,6 @@
     android:id="@android:id/list"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="parent"
+    android:scrollbarAlwaysDrawVerticalTrack="true"
     android:scrollbars="vertical"
     />
