--- a/app/src/main/res/layout/activity_film_edit.xml
+++ b/app/src/main/res/layout/activity_film_edit.xml
@@ -122,10 +122,18 @@
         android:importantForAutofill="no"
         android:hint="@string/film_edit_comments" />
 
+    <Button
+        android:id="@+id/film_geoEnable"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="@string/film_geoEnable"
+        style="@style/Widget.AppCompat.Button.Small"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_gravity="center|bottom"
         android:orientation="horizontal">
       <Button
